--- a/packages/reporters/package.json
+++ b/packages/reporters/package.json
@@ -15,15 +15,19 @@
     "lint": "monorepo-scripts lint"
   },
   "dependencies": {
+    "@lage-run/format-hrtime": "^0.1.1",
     "@lage-run/logger": "^1.2.0",
     "@lage-run/scheduler-types": "^0.1.11",
     "@lage-run/target-graph": "^0.4.3",
-    "@lage-run/format-hrtime": "^0.1.1",
-    "chalk": "^4.0.0",
     "ansi-regex": "^5.0.1",
-    "gradient-string": "^2.0.1"
+    "chalk": "^4.0.0",
+    "color": "^3.1.3",
+    "gradient-string": "^2.0.1",
+    "ink": "^3.2.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
+    "@types/color": "^3.0.3",
     "memory-streams": "0.1.3"
   },
   "publishConfig": {
